[gd_scene load_steps=4 format=3 uid="uid://ccn2ey1yqk10n"]

[ext_resource type="Script" path="res://world.gd" id="1_dqx0o"]
[ext_resource type="PackedScene" uid="uid://d1oygurcf1wxh" path="res://character/rogue/rogue_ui.tscn" id="2_gclgr"]
[ext_resource type="PackedScene" uid="uid://delttbb4emcex" path="res://character/huntress/huntress_ui.tscn" id="3_p3e5b"]

[node name="World" type="Node2D"]
script = ExtResource("1_dqx0o")

[node name="CharacterUIs" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RogueUI" parent="CharacterUIs" instance=ExtResource("2_gclgr")]
unique_name_in_owner = true

[node name="HuntressUI" parent="CharacterUIs" instance=ExtResource("3_p3e5b")]
unique_name_in_owner = true

[node name="MarkerStart" type="Marker2D" parent="."]
visible = false
position = Vector2(177, 586)

[node name="MarkerEnd" type="Marker2D" parent="."]
visible = false
position = Vector2(824, 425)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -43.0
offset_top = 425.0
offset_right = 1209.0
offset_bottom = 575.0

[node name="Markers" type="Node2D" parent="."]

[node name="MarkerLT" type="Marker2D" parent="Markers"]
unique_name_in_owner = true
position = Vector2(150, 425)

[node name="MarkerRT" type="Marker2D" parent="Markers"]
unique_name_in_owner = true
position = Vector2(900, 425)

[node name="MarkerLB" type="Marker2D" parent="Markers"]
unique_name_in_owner = true
position = Vector2(150, 575)

[node name="MarkerRB" type="Marker2D" parent="Markers"]
unique_name_in_owner = true
position = Vector2(900, 575)
